--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "prisma": {
+  "seed": "ts-node prisma/seed.ts"
+}
+
 }
